1. Se ha dividido parte del código de framework.jsp entre header.jsp y footer.jsp para facilitar su manipulación. 2. Se ha añadido un nuevo botón para facilitar el cambio de idioma de la web.

--- a/src/main/webapp/resources/bundles/languages/language_en.properties
+++ b/src/main/webapp/resources/bundles/languages/language_en.properties
@@ -3,7 +3,10 @@
 # and open the template in the editor.
 
 # - Framework - #
-framework.framework.small.derechos=All rights reserved.
+framework.footer.a.espa\u00f1ol=Spanish (EU)
+framework.footer.a.ingles=English (EU)
+framework.footer.small.derechos=All rights reserved.
+framework.footer.span.idioma=Language
 
 framework.login.a.consulta=link
 framework.login.a.recuperar=Can't log in?
