--- a/src/main/webapp/resources/bundles/languages/language_es.properties
+++ b/src/main/webapp/resources/bundles/languages/language_es.properties
@@ -3,7 +3,10 @@
 # and open the template in the editor.
 
 # - Framework - #
-framework.framework.small.derechos=Todos los derechos reservados.
+framework.footer.a.espa\u00f1ol=Espa\u00f1ol (EU)
+framework.footer.a.ingles=Ingl\u00e9s (EU)
+framework.footer.small.derechos=Todos los derechos reservados.
+framework.footer.span.idioma=Idioma
 
 framework.login.a.consulta=enlace
 framework.login.a.recuperar=\u00bfNo puedes iniciar sesi\u00f3n?
