1. Se ha reescrito el contenido del footer. 2. Se han añadido nuevas traducciones [inglés]. 3. Se ha mejorado la apariencia del dropup de idiomas.

--- a/src/main/webapp/resources/bundles/languages/language_en.properties
+++ b/src/main/webapp/resources/bundles/languages/language_en.properties
@@ -3,10 +3,15 @@
 # and open the template in the editor.
 
 # - Framework - #
-framework.footer.a.espa\u00f1ol=Spanish (EU)
+framework.footer.a.condiciones=Terms
+framework.footer.a.espanol=Spanish (EU)
+framework.footer.a.informacion=About
 framework.footer.a.ingles=English (EU)
+framework.footer.a.privacidad=Privacy
+framework.footer.a.soporte=Support
+framework.footer.a.sugerencias=Feedback
 framework.footer.small.derechos=All rights reserved.
-framework.footer.span.idioma=Language
+framework.footer.a.idioma=Language
 
 framework.login.a.consulta=link
 framework.login.a.recuperar=Can't log in?
