1. Añadida cabecera de región al selector de idiomas. 2. Eliminado texto por defecto en traducciones. 3. Reajustados algunos estilos.

--- a/src/main/webapp/resources/bundles/languages/language_en.properties
+++ b/src/main/webapp/resources/bundles/languages/language_en.properties
@@ -4,9 +4,10 @@
 
 # - Framework - #
 framework.footer.a.condiciones=Terms
-framework.footer.a.espanol=Spanish (EU)
+framework.footer.a.espanol=Spanish
+framework.footer.a.europa=Europe
 framework.footer.a.informacion=About
-framework.footer.a.ingles=English (EU)
+framework.footer.a.ingles=English
 framework.footer.a.privacidad=Privacy
 framework.footer.a.soporte=Support
 framework.footer.a.sugerencias=Feedback
