--- a/src/main/webapp/resources/bundles/languages/language_es.properties
+++ b/src/main/webapp/resources/bundles/languages/language_es.properties
@@ -4,9 +4,10 @@
 
 # - Framework - #
 framework.footer.a.condiciones=Condiciones
-framework.footer.a.espanol=Espa\u00f1ol (EU)
+framework.footer.a.espanol=Espa\u00f1ol
+framework.footer.a.europa=Europa
 framework.footer.a.informacion=Informaci\u00f3n
-framework.footer.a.ingles=Ingl\u00e9s (EU)
+framework.footer.a.ingles=Ingl\u00e9s
 framework.footer.a.privacidad=Privacidad
 framework.footer.a.soporte=Soporte
 framework.footer.a.sugerencias=Sugerencias
