- Añadida traducción de continente.

--- a/src/main/webapp/resources/bundles/languages/language_en.properties
+++ b/src/main/webapp/resources/bundles/languages/language_en.properties
@@ -3,6 +3,7 @@
 # and open the template in the editor.
 
 # - Framework - #
+framework.footer.a.america=Americas
 framework.footer.a.condiciones=Terms
 framework.footer.a.espanol=Spanish
 framework.footer.a.europa=Europe
