--- a/src/main/webapp/resources/bundles/languages/language_es.properties
+++ b/src/main/webapp/resources/bundles/languages/language_es.properties
@@ -3,6 +3,7 @@
 # and open the template in the editor.
 
 # - Framework - #
+framework.footer.a.america=Am\u00e9rica
 framework.footer.a.condiciones=Condiciones
 framework.footer.a.espanol=Espa\u00f1ol
 framework.footer.a.europa=Europa
